# LiveDict

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  testfile.py
docs/: conf.py
livedict/: LICENSE  README.md  __init__.py  core.py  project.toml  setup.py
livedict/docs/: api.rst
livedict/livedict/: __init__.py  core.py
livedict/modules/: __init__.py  asynclivedict.py  exceptions.py  livedict.py  sandbox.py  storage_backend.py  synclivedict.py
src/: __init__.py  core.py
tests/: QuickStart.py  example.py  test_core.py  test_pytest.py
