[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livedict"
version = "2.0.0"
description = "TTL-based key-value store with sandboxed hooks and (optionally) persistence backends (SQLite/Memory/Redis)."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"] 
authors = [
    { name = "Hemanshu Vaidya", email = "hemanshuvaidya64@gmail.com" }
]
dependencies = [
    "redis>=4.0",
    "sqlite3>=3.0",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/hemanshu03/LiveDict"
Source = "https://github.com/hemanshu03/LiveDict"
Issues = "https://github.com/hemanshu03/LiveDict/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]

